@@ -81,7 +81,11 @@ class Groups_Admin_User_Profile {
 						esc_attr( __( 'Choose groups &hellip;', 'groups' ) )
 					);
 					foreach( $groups as $group ) {
-						$output .= sprintf( '<option value="%d">%s</option>', Groups_Utility::id( $group->group_id ), wp_filter_nohtml_kses( $group->name ) );
+						$output .= sprintf(
+							'<option value="%d">%s</option>',
+							Groups_Utility::id( $group->group_id ),
+							stripslashes( wp_filter_nohtml_kses( $group->name ) )
+						);
 					}
 					$output .= '</select>';
 					$output .= Groups_UIE::render_select( '#user-groups' );
@@ -140,7 +144,10 @@ class Groups_Admin_User_Profile {
 					usort( $groups, array( __CLASS__, 'by_group_name' ) );
 					$output .= '<ul>';
 					foreach( $groups as $group ) {
-						$output .= '<li>' . wp_filter_nohtml_kses( $group->name ) . '</li>';
+						$output .=
+							'<li>' .
+							stripslashes( wp_filter_nohtml_kses( $group->name ) ) .
+							'</li>';
 					}
 					$output .= '</ul>';
 				}
@@ -171,7 +178,12 @@ class Groups_Admin_User_Profile {
 				);
 				foreach( $groups as $group ) {
 					$is_member = Groups_User_Group::read( $user->ID, $group->group_id ) ? true : false;
-					$output .= sprintf( '<option value="%d" %s>%s</option>', Groups_Utility::id( $group->group_id ), $is_member ? ' selected="selected" ' : '', wp_filter_nohtml_kses( $group->name ) );
+					$output .= sprintf(
+						'<option value="%d" %s>%s</option>',
+						Groups_Utility::id( $group->group_id ),
+						$is_member ? ' selected="selected" ' : '',
+						stripslashes( wp_filter_nohtml_kses( $group->name ) )
+					);
 				}
 				$output .= '</select>';
 				$output .= Groups_UIE::render_select( '#user-groups' );
